package eng.jAtcSim.newLib.area.oldApproaches.stages;

public interface IApproachStage {

}
