package eng.jAtcSim.newLib.area.oldApproaches.stages;

public class LandingStage implements IApproachStage {
  public LandingStage() {
  }
}
