@startuml

package stages{
interface IApproachStage
interface ICheckStage
interface IExitCondition

class LandingStage
class RadialStage
class RadialWithDescentStage
class RouteStage
}

LandingStage --|> IApproachStage
RadialStage --|> IApproachStage
RadialWithDescentStage --|> IApproachStage
RouteStage --|> IApproachStage

package checks{
class CheckAirportVisibilityStage
class CheckPlaneLocationStage
class CheckPlaneShaStage
}

CheckAirportVisibilityStage --|> ICheckStage
CheckPlaneLocationStage --|> ICheckStage
CheckPlaneLocationStage --|> ICheckStage

package exitConditions{
class AltitudeExitCondition
class CoordinateCloseExitCondition
class CoordinatePassedExitCondition
}

AltitudeExitCondition --|> IExitCondition
IExitCondition <|-- CoordinateCloseExitCondition
IExitCondition <|-- CoordinatePassedExitCondition

package entryLocations{
interface IApproachEntryLocation
class FixRelatedApproachEntryLocation
class RegionalApproachEntryLocation
}

FixRelatedApproachEntryLocation --|> IApproachEntryLocation
RegionalApproachEntryLocation --|> IApproachEntryLocation

class Approach{
  -entries : IList<ApproachEntry>
  -stages:IList<IApproachStage>
  -gaRoute : GaRoute
  -type : ApproachType
}
class ApproachEntry{
  -entryLocation : IApproachEntryLocation
  -iafRoute : IafRoute
}

Approach ..> ApproachEntry
Approach ..> IApproachStage
ApproachEntry ..> IApproachEntryLocation



@enduml